Fix timer font to align number

--- a/src/graphics/_misc/fonts/general_bsg.css
+++ b/src/graphics/_misc/fonts/general_bsg.css
@@ -15,7 +15,8 @@
 /* https://www.dafont.com/ds-digital.font */
 @font-face {
   font-family: 'DS_DIGITAL';
-  src: url('DS-DIGI.TTF') format('truetype');
+  /* small customisation that aligns the 1 to the right */
+  src: url('DS-Digital_bsg.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
 }
